--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+h3 {
+  color: grey;
+  text-align: center;
+  font-size: 100px;
+}
+p {
+  font-size: 50px;
+}
 body {
-
+  background-color: antiquewhite;
+}
+p {
+  color: black;
+  text-align: center;
+}
+img {
+  width: 500px;
+  padding: 10px;
 }
